2011-01-20  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.6
	* Fix for shifting EPG events outside before/after
	* Removed ellipsis from first event

2010-12-13  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.5
	* Removed France from auto scan list, channels missing
	* Added option to disable TeleText stream
	* Fixed typo for "text_encoding" (LP: 689121)
	* Fixed issue with recurring SRs being removed (LP: 688925)
	* Using signal_toggled() to capture key presses in EPG (LP: 678452)
	* EPG event buttons now use ellipsize.

2010-11-11  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.4
	* Using time_t instead of guint
	* Refactored action after for SRs to a better location
	* Better information about auto record conflicts
	* Error messages now appear in status bar
	* Added tooltips to control buttons
	* Preferred language feature removed
	* Fix for 1 min recordings on DVB-S cards

2010-11-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.3
	* Moved screensaver inhibit to player
	* Changed channels.conf parser to accept VSB_8

2010-08-08  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.2
	* Fixed recording filename on instant record
	* Fixed mute when changing channels
	* Moved PAT/PMT write timer to channel stream class
	* Added time to status bar in fullscreen
	* Added next/previous day buttons to EPG

2010-07-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.1
	* Fixed issue with hyphens in man page
	* Made window hide more responsive
	* Treating a single hyphen in the EPG subtitle as blank
	* Added Watch Now button to EPG event dialog
	* Status icon now shows SR description rather than channel description for SRs
	* Added CZ scan range (patch from Luboš Staněk)
	* Fixed issues with non-translatable strings in UI file (patch from Luboš Staněk)
	* EPG thread now stays running when no streams are in running
	* Better message when unable to talk to gnome-screensaver
	* Scheduled recording manager should now only save if dirty