@@ -37,10 +37,6 @@ ChannelStream::ChannelStream(ChannelStreamType t, Channel& c, const Glib::ustrin
 	type = t;
 	filename = f;
 	description = d;
-	output_channel = Glib::IOChannel::create_from_file(filename, "w");
-	output_channel->set_encoding("");
-	output_channel->set_flags(output_channel->get_flags() & Glib::IO_FLAG_NONBLOCK);
-	output_channel->set_buffer_size(TS_PACKET_SIZE * PACKET_BUFFER_SIZE);
 	last_insert_time = 0;
 	
 	g_debug("Added new channel stream '%s' -> '%s'", channel.name.c_str(), filename.c_str());
@@ -50,7 +46,18 @@ ChannelStream::~ChannelStream()
 {
 	g_debug("Destroying channel stream '%s' -> '%s'", channel.name.c_str(), filename.c_str());
 	clear_demuxers();
-	output_channel.reset();
+	if (output_channel)
+	{
+		output_channel.reset();
+	}
+}
+
+void ChannelStream::open()
+{
+	output_channel = Glib::IOChannel::create_from_file(filename, "w");
+	output_channel->set_encoding("");
+	output_channel->set_flags(output_channel->get_flags() & Glib::IO_FLAG_NONBLOCK);
+	output_channel->set_buffer_size(TS_PACKET_SIZE * PACKET_BUFFER_SIZE);
 }
 
 void ChannelStream::clear_demuxers()
@@ -89,32 +96,34 @@ Dvb::Demuxer& ChannelStream::add_section_demuxer(const Glib::ustring& demux_path
 
 void ChannelStream::write(guchar* buffer, gsize length)
 {
-	if (output_channel)
+	if (!output_channel)
 	{
-		try
+		open();
+	}
+	
+	try
+	{
+		time_t now = time(NULL);
+		if (now - last_insert_time > 2)
 		{
-			time_t now = time(NULL);
-			if (now - last_insert_time > 2)
-			{
-				last_insert_time = now;
+			last_insert_time = now;
 
-				guchar data[TS_PACKET_SIZE];
+			guchar data[TS_PACKET_SIZE];
 
-				stream.build_pat(data);
-				write(data, TS_PACKET_SIZE);
+			stream.build_pat(data);
+			write(data, TS_PACKET_SIZE);
 
-				stream.build_pmt(data);
-				write(data, TS_PACKET_SIZE);
+			stream.build_pmt(data);
+			write(data, TS_PACKET_SIZE);
 
-			}
-
-			gsize bytes_written = 0;
-			output_channel->write((const gchar*)buffer, length, bytes_written);
 		}
-		catch(...)
-		{
-			g_debug("Failed to write to output channel");
-		}
+
+		gsize bytes_written = 0;
+		output_channel->write((const gchar*)buffer, length, bytes_written);
+	}
+	catch (...)
+	{
+		g_debug("Failed to write to output channel");
 	}
 }
 
