@@ -39,6 +39,8 @@ private:
 	Dvb::DemuxerList				demuxers;
 	Glib::StaticRecMutex			mutex;
 	guint					last_insert_time;
+
+	void open();
 		
 public:
 	ChannelStream(ChannelStreamType type, Channel& channel, const Glib::ustring& filename,
