@@ -1,8 +1,9 @@
-2011-01-20  Michael Lamothe <michael.lamothe@gmail.com>
+2011-01-22  Michael Lamothe <michael.lamothe@gmail.com>
 
 	* 1.3.6
 	* Fix for shifting EPG events outside before/after
 	* Removed ellipsis from first event
+	* Attempting to create recording file on write rather than ChannelStream constructor
 
 2010-12-13  Michael Lamothe <michael.lamothe@gmail.com>
 
